--- a/4battleApp.html
+++ b/4battleApp.html
@@ -22,7 +22,7 @@
     <!-- scenairo -->
     <!-- <img id="effect1" class="d-none" src="./4battleImg/scenario.png" alt="짜" />  -->
     <!-- <img id="effect1" class = d-none src="4battleImg/scenario2.png" alt="잔"> -->
-    <img id="talk1" class="d-none" src="4battleImg/talk1.png" alt="대화1" />
+    <img id="talk1" class="d-none" src="4battleImg/예시.png" alt="대화1" />
     <img id="talk2" class="d-none" src="4battleImg/talk2.png" alt="대화2" />
     <img id="talk3" class="d-none" src="4battleImg/talk3.png" alt="대화3" />
     <img id="talk4" class="d-none" src="4battleImg/talk4.png" alt="대화4" />
