// 0408 슬롯 구조화 및 스핀, 스탑 버튼 수정

--- a/1slotApp.html
+++ b/1slotApp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <script type="module" src="1slotApp.js" defer="defer" ></script> 
-    <link rel="stylesheet" href="/slot3/1slotCSS/1slotGamebtn.css">
+    <link rel="stylesheet" href="/1slotCSS/1slotGamebtn.css">
     <!-- App는 실행을 위한 JS
     Canvas는 입출력을 위한 JS -->
     <style>
@@ -27,14 +27,14 @@
     <img id="frame" src="./1slotImg/frame1.png" class = "d-none">
     <img id="BG" src="./1slotImg/gameBack11.png" class="d-none">
 
-    <img id="pass" src="/slot3/1slotImg/clear.png" class="d-none">
-    <img id="fail" src="/slot3/1slotImg/fail.png" class="d-none">
+    <img id="pass" src="/1slotImg/clear.png" class="d-none">
+    <img id="fail" src="/1slotImg/fail.png" class="d-none">
     
-    <img id="f1" src="/slot3/1slotImg/food1.jpg" class="d-none">
-    <img id="f2" src="/slot3/1slotImg/food2.jpg" class="d-none">
-    <img id="f3" src="/slot3/1slotImg/food3.jpg" class="d-none">
-    <img id="f4" src="/slot3/1slotImg/food4.jpg" class="d-none">
-    <img id="f5" src="/slot3/1slotImg/newLec.jpg" class="d-none">
+    <img id="f1" src="/1slotImg/food1.jpg" class="d-none">
+    <img id="f2" src="/1slotImg/food2.jpg" class="d-none">
+    <img id="f3" src="/1slotImg/food3.jpg" class="d-none">
+    <img id="f4" src="/1slotImg/food4.jpg" class="d-none">
+    <img id="f5" src="/1slotImg/newLec.jpg" class="d-none">
 
 
     <button id="spinBtn">Spin</button>
