--- a/4battleApp.html
+++ b/4battleApp.html
@@ -26,6 +26,7 @@
     <img id="talk2" class="d-none" src="4battleImg/talk2.png" alt="대화2" />
     <img id="talk3" class="d-none" src="4battleImg/talk3.png" alt="대화3" />
     <img id="talk4" class="d-none" src="4battleImg/talk4.png" alt="대화4" />
+    <img id="rule" class="d-none" src="4battleImg/Gamerule.png" alt="규칙" />
 
     <!-- background -->
     <img id="background" class="d-none" src="./4battleImg/background.png" />
