[canvas] 캔버스 추가 및 교체
- (성공) app.js에서 캔버스 교체
- (작업 중) RestaurantCanvas에서 클릭 시 이미지 그리기

--- a/0townApp.html
+++ b/0townApp.html
@@ -11,15 +11,24 @@
 </head>
 
 <body>
+    <!-- 맵 배경 -->
     <img src="/images/townBg.png" id="map" class="d-none">
+    <!-- 식당 이미지 -->
     <img src="/images/rstrnt_0.png" id="rstrnt0" class="d-none">
     <img src="/images/rstrnt_1.png" id="rstrnt1" class="d-none">
     <img src="/images/rstrnt_2.png" id="rstrnt2" class="d-none">
     <img src="/images/rstrnt_3.png" id="rstrnt3" class="d-none">
     <img src="/images/rstrnt_4.png" id="rstrnt4" class="d-none">
     <img src="/images/rstrnt_5.png" id="rstrnt5" class="d-none">
+    <!-- 식당 정보 -->
     <img src="/images/balloon.png" id="rstrntInfo0" class="d-none">
+    <!-- 예진 -->
     <img src="/images/userWalk.png" id="user" class="d-none">
+    <!-- scenes -->
+    <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none">
+    <img src="/images/menu.png" id="inRstrnt1" class="d-none">
+    <!-- 다음 -->
+    <button id="next">다음</button>
 </body>
 
 </html>
