캔버스 연결 성공 ^^

--- a/4battleApp.html
+++ b/4battleApp.html
@@ -19,14 +19,15 @@
   </head>
 
   <body>
+    <!-- 4battle JIN -->
     <!-- scenairo -->
     <!-- <img id="effect1" class="d-none" src="./4battleImg/scenario.png" alt="짜" />  -->
     <!-- <img id="effect1" class = d-none src="4battleImg/scenario2.png" alt="잔"> -->
-    <img id="talk1" class="d-none" src="4battleImg/예시.png" alt="대화1" />
-    <img id="talk2" class="d-none" src="4battleImg/talk2.png" alt="대화2" />
-    <img id="talk3" class="d-none" src="4battleImg/talk3.png" alt="대화3" />
-    <img id="talk4" class="d-none" src="4battleImg/talk4.png" alt="대화4" />
-    <img id="rule" class="d-none" src="4battleImg/Gamerule.png" alt="규칙" />
+    <img id="talk0" class="d-none" src="4battleImg/예시.png" alt="대화1" />
+    <img id="talk1" class="d-none" src="4battleImg/talk2.png" alt="대화2" />
+    <img id="talk2" class="d-none" src="4battleImg/talk3.png" alt="대화3" />
+    <img id="talk3" class="d-none" src="4battleImg/talk4.png" alt="대화4" />
+    <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" alt="규칙" />
 
     <!-- background -->
     <img id="background" class="d-none" src="./4battleImg/background.png" />
