--- a/4battleApp.html
+++ b/4battleApp.html
@@ -21,15 +21,14 @@
   <body>
     <!-- 4battle JIN -->
     <!-- scenairo -->
-    <!-- <img id="effect1" class="d-none" src="./4battleImg/scenario.png" alt="짜" />  -->
-    <!-- <img id="effect1" class = d-none src="4battleImg/scenario2.png" alt="잔"> -->
-    <img id="talk0" class="d-none" src="4battleImg/예시.png" alt="대화1" />
-    <img id="talk1" class="d-none" src="4battleImg/talk2.png" alt="대화2" />
-    <img id="talk2" class="d-none" src="4battleImg/talk3.png" alt="대화3" />
-    <img id="talk3" class="d-none" src="4battleImg/talk4.png" alt="대화4" />
-    <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" alt="규칙" />
+    <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
+    <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" />
+    <img id="talk0" class="d-none" src="4battleImg/talk0.png" />
+    <img id="talk1" class="d-none" src="4battleImg/talk1.png" />
+    <img id="talk2" class="d-none" src="4battleImg/talk2.png" />
+    <img id="talk3" class="d-none" src="4battleImg/talk3.png" />
+    <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" />
 
-    <!-- background -->
     <img id="background" class="d-none" src="./4battleImg/background.png" />
 
     <!-- game NPC -->
