[initial commit] 첫 머지 ㄱ

--- a/app.html
+++ b/app.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>town</title>
-    <script src="0townApp.js" type="module" defer="defer"></script>
+    <script src="app.js" type="module" defer="defer"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
