--- a/4battleApp.html
+++ b/4battleApp.html
@@ -20,6 +20,7 @@
 
   <body>
     <!-- 4battle JIN -->
+
     <!-- scenairo -->
     <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
     <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" />
@@ -29,11 +30,15 @@
     <img id="talk3" class="d-none" src="4battleImg/talk3.png" />
     <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" />
 
+    <!-- background -->
     <img id="background" class="d-none" src="./4battleImg/background.png" />
+
+    <!-- girl -->
+    <img id="girl" class="d-none" src="./4battleImg/girl.png" />
 
     <!-- game NPC -->
     <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
-    <img id="user" class="d-none" src="./4battleImg/userHappy.png" />
+    <img id="4user" class="d-none" src="./4battleImg/userHappy.png" />
 
     <!-- food -->
     <img id="food" class="d-none" src="./4battleImg/onion.png" />
@@ -42,5 +47,9 @@
     <!-- space -->
     <img id="spaceUp" class="d-none" src="./4battleImg/spaceup.png" />
     <img id="spaceDown" class="d-none" src="./4battleImg/spacedown1.png" />
+
+    <!-- win/lose -->
+    <img id="win" class="d-none" src="./4battleImg/win.png" />
+    <img id="lose" class="d-none" src="./4battleImg/lose.png" />
   </body>
 </html>
