--- a/app.html
+++ b/app.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <!-- ■■■■■■■■■■■■■■■■■■ 상민 ■■■■■■■■■■■■■■■■■■■■-->
     <!-- 맵 배경 -->
     <img src="/images/townBg.png" id="map" class="d-none" />
     <!-- 식당 이미지 -->
@@ -27,8 +28,18 @@
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
     <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
 
-    <!-- 4battle JIN -->
-
+    <!--■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■>
+    <!-- 배경 -->
+    <img src="3quizImg/quiz_bg1.png" class="d-none" id="bg1">
+    <img src="3quizImg/quiz_bg2.png" class="d-none" id="bg2">
+    <!-- 콘텐츠 -->
+    <img src="3quizImg/rule.png" class="d-none" id="rule">
+    <!-- 버튼 -->
+    <img class="d-none" id="startbtn1" src="3quizImg/button_start.png">
+    <img class="d-none" id="startbtn2" src="3quizImg/button_start2.png">
+    <img class="d-none" id="rulebtn" src="3quizImg/rulebtn.png">
+    
+    <!-- ■■■■■■■■■■■■■■■■■■ 4battle JIN ■■■■■■■■■■■■■■■■■■ -->
     <!-- scenairo -->
     <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
     <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" />
@@ -62,16 +73,6 @@
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none">
     <img src="/images/menu.png" id="inRstrnt1" class="d-none">
 
-    <!-------------- 세영 -------------->
-    <!-- 배경 -->
-    <img src="3quizImg/quiz_bg1.png" class="d-none" id="bg1">
-    <img src="3quizImg/quiz_bg2.png" class="d-none" id="bg2">
-    <!-- 콘텐츠 -->
-    <img src="3quizImg/rule.png" class="d-none" id="rule">
-    <!-- 버튼 -->
-    <img class="d-none" id="startbtn1" src="3quizImg/button_start.png">
-    <img class="d-none" id="startbtn2" src="3quizImg/button_start2.png">
-    <img class="d-none" id="rulebtn" src="3quizImg/rulebtn.png">
 
 
 </body>
