--- a/app.html
+++ b/app.html
@@ -13,20 +13,28 @@
     <!-- ■■■■■■■■■■■■■■■■■■ 상민 ■■■■■■■■■■■■■■■■■■■■-->
     <!-- 맵 배경 -->
     <img src="/images/townBg.png" id="map" class="d-none" />
-    <!-- 식당 이미지 -->
-    <img src="/images/rstrnt_0.png" id="rstrnt0" class="d-none" />
-    <img src="/images/rstrnt_1.png" id="rstrnt1" class="d-none" />
-    <img src="/images/rstrnt_2.png" id="rstrnt2" class="d-none" />
-    <img src="/images/rstrnt_3.png" id="rstrnt3" class="d-none" />
-    <img src="/images/rstrnt_4.png" id="rstrnt4" class="d-none" />
-    <img src="/images/rstrnt_5.png" id="rstrnt5" class="d-none" />
-    <!-- 식당 정보 -->
-    <img src="/images/balloon.png" id="rstrntInfo0" class="d-none" />
-    <!-- 예진 -->
-    <img src="/images/userWalk.png" id="user" class="d-none" />
-    <!-- scenes -->
+        <!-- 식당 이미지 -->
+        <img src="/images/rstrnt_0.png" id="rstrnt0" class="d-none" />
+        <img src="/images/rstrnt_1.png" id="rstrnt1" class="d-none" />
+        <img src="/images/rstrnt_2.png" id="rstrnt2" class="d-none" />
+        <img src="/images/rstrnt_3.png" id="rstrnt3" class="d-none" />
+        <img src="/images/rstrnt_4.png" id="rstrnt4" class="d-none" />
+        <img src="/images/rstrnt_5.png" id="rstrnt5" class="d-none" />
+        <!-- 식당 정보 -->
+        <img src="/images/balloon.png" id="rstrntInfo0" class="d-none" />
+        <!-- 예진 -->
+        <img src="/images/userWalk.png" id="user" class="d-none" />
+    <!-- 식당 입장 후 Scenes -->
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
     <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
+        <!-- 메뉴판 버튼 -->
+        <button id="menuBtn0" class="d-non">선택</button>
+        <button id="menuBtn1" class="d-none">선택</button>
+        <button id="menuBtn2" class="d-none">선택</button>
+        <button id="menuBtn3" class="d-none">선택</button>
+        <button id="menuBtn4" class="d-none">선택</button>
+        <button id="menuBtn5" class="d-none">선택</button>
+        <button id="menuBtn6" class="d-none">선택</button>
 
     <!--■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■>
     <!-- 배경 -->
