짜잘하게 시도중

--- a/app.html
+++ b/app.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>town</title>
     <script src="app.js" type="module" defer="defer"></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/app.css" />
   </head>
 
   <body>
@@ -58,6 +58,8 @@
     <!-- game NPC -->
     <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
     <img id="4user" class="d-none" src="./4battleImg/userHappy.png" />
+    <img id="ceowin" class="d-none" src="./4battleImg/userHappy.png" />
+    <img id="userwin" class="d-none" src="./4battleImg/ceoMad.png" />
 
     <!-- food -->
     <img id="food" class="d-none" src="./4battleImg/onion.png" />
