--- a/4battleApp.html
+++ b/4battleApp.html
@@ -39,6 +39,8 @@
     <!-- game NPC -->
     <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
     <img id="4user" class="d-none" src="./4battleImg/userHappy.png" />
+    <img id="ceowin" class="d-none" src="./4battleImg/userHappy.png" />
+    <img id="userwin" class="d-none" src="./4battleImg/ceoMad.png" />
 
     <!-- food -->
     <img id="food" class="d-none" src="./4battleImg/onion.png" />
