app.html 사진 추가(사진 수정예정)

--- a/app.html
+++ b/app.html
@@ -27,6 +27,23 @@
     <!-- 식당 입장 후 Scenes -->
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
     <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
+    <img src="/images/inrstrnt_2.png" id="rstrnt2" class="d-none" />
+    <img src="/images/inrstrnt_3.png" id="rstrnt3" class="d-none" />
+    <img src="/images/inrstrnt_4.png" id="rstrnt4" class="d-none" />
+    <img src="/images/inrstrnt_5.png" id="rstrnt5" class="d-none" />
+    <img src="/images/inrstrnt_6.png" id="rstrnt6" class="d-none" />
+    <img src="/images/inrstrnt_7.png" id="rstrnt7" class="d-none" />
+    <img src="/images/inrstrnt_8.png" id="rstrnt8" class="d-none" />
+    <!-- <img src="/images/inrstrnt_9.png" id="rstrnt9" class="d-none" /> -->
+    <img src="/images/inrstrnt_10.png" id="rstrnt10" class="d-none" />
+    <img src="/images/inrstrnt_11.png" id="rstrnt11" class="d-none" />
+    <img src="/images/inrstrnt_12.png" id="rstrnt12" class="d-none" />
+    <img src="/images/inrstrnt_13.png" id="rstrnt13" class="d-none" />
+    <img src="/images/inrstrnt_14.png" id="rstrnt14" class="d-none" />
+    <img src="/images/inrstrnt_15.png" id="rstrnt15" class="d-none" />
+    <img src="/images/inrstrnt_16.png" id="rstrnt16" class="d-none" />
+    <img src="/images/inrstrnt_17.png" id="rstrnt17" class="d-none" />
+
     <!-- 메뉴판 버튼 -->
     <button id="menuBtn0" class="d-non">선택</button>
     <button id="menuBtn1" class="d-none">선택</button>
