--- a/app.html
+++ b/app.html
@@ -28,13 +28,13 @@
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
     <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
         <!-- 메뉴판 버튼 -->
-        <button id="menuBtn0" class="d-non">선택</button>
-        <button id="menuBtn1" class="d-none">선택</button>
-        <button id="menuBtn2" class="d-none">선택</button>
-        <button id="menuBtn3" class="d-none">선택</button>
-        <button id="menuBtn4" class="d-none">선택</button>
-        <button id="menuBtn5" class="d-none">선택</button>
-        <button id="menuBtn6" class="d-none">선택</button>
+        <button id="menuBtn0" class="menuBtn0">선택</button>
+        <button id="menuBtn1" class="menuBtn1">선택</button>
+        <button id="menuBtn2" class="menuBtn2">선택</button>
+        <button id="menuBtn3" class="menuBtn3">선택</button>
+        <button id="menuBtn4" class="menuBtn4">선택</button>
+        <button id="menuBtn5" class="menuBtn5">선택</button>
+        <button id="menuBtn6" class="menuBtn6">선택</button>
 
     <!--■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■>
     <!-- 배경 -->
