[Scene] inRestaurant Scene_9 : 평가 화면 수정 중
- 배경만 추가했고 실제 구현해야 함

--- a/app.html
+++ b/app.html
@@ -24,10 +24,12 @@
         <img src="/images/balloon.png" id="rstrntInfo0" class="d-none" />
         <!-- 예진 -->
         <img src="/images/userWalk.png" id="user" class="d-none" />
-    <!-- 식당 입장 후 Scenes -->
+    <!-- 식당 입장 후 -->
+    <!-- Scene_0 : 어서오세요 -->
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
-    <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
-        <!-- 메뉴판 버튼 -->
+    <!-- Scene_1 : 메뉴판 -->
+    <img src="/images/inRstrnt_1.png" id="inRstrnt1" class="d-none" />
+        <!-- 메뉴 선택 버튼 -->
         <button id="menuBtn0" class="menuBtn0">선택</button>
         <button id="menuBtn1" class="menuBtn1">선택</button>
         <button id="menuBtn2" class="menuBtn2">선택</button>
@@ -35,8 +37,10 @@
         <button id="menuBtn4" class="menuBtn4">선택</button>
         <button id="menuBtn5" class="menuBtn5">선택</button>
         <button id="menuBtn6" class="menuBtn6">선택</button>
+    <!-- Scene_9 : 평가 -->
+    <img src="images/inRstrnt_9.png" id="inRstrnt9" class="d-none">
 
-    <!--■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■>
+    <!-- ■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■ -->
     <!-- 배경 -->
     <img src="3quizImg/quiz_bg1.png" class="d-none" id="bg1">
     <img src="3quizImg/quiz_bg2.png" class="d-none" id="bg2">
