[0menu.js] 메뉴판 찐 완료
- 버튼 구현
- 버튼 클릭 시 메뉴판에 주문 : (메뉴명) 출력

--- a/app.html
+++ b/app.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>town</title>
     <script src="app.js" type="module" defer="defer"></script>
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/app.css">
   </head>
 
   <body>
@@ -24,7 +24,7 @@
         <img src="/images/balloon.png" id="rstrntInfo0" class="d-none" />
         <!-- 예진 캐릭터 -->
         <img src="/images/userWalk.png" id="user" class="d-none" />
-        
+
     <!-- ■■■■■■■■■■■■■■■■■■ 식당 입장 ■■■■■■■■■■■■■■■■■■ -->
     <!-- Scene_0 : 어서오세요 -->
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
@@ -47,7 +47,8 @@
     <img src="/images/inrstrnt_7.png" id="inRstrnt7" class="d-none" />
     <img src="/images/inrstrnt_8.png" id="inRstrnt8" class="d-none" />
     <!-- Scene_9 : 평가 -->
-    <img src="images/inRstrnt_9.png" id="inRstrnt9" class="d-none">
+    <img src="/images/inRstrnt_9.png" id="inRstrnt9" class="d-none">
+    <!-- Scene_10~17 -->
     <img src="/images/inrstrnt_10.png" id="inRstrnt10" class="d-none" />
     <img src="/images/inrstrnt_11.png" id="inRstrnt11" class="d-none" />
     <img src="/images/inrstrnt_12.png" id="inRstrnt12" class="d-none" />
