[Scene_9] 평가 페이지 수정중
- 평가 페이지의 배경 이미지 설정 완료
- 평가 가격 입력폼 삽입 테스트

--- a/app.html
+++ b/app.html
@@ -38,6 +38,7 @@
         <button id="menuBtn4" class="menuBtn4">선택</button>
         <button id="menuBtn5" class="menuBtn5">선택</button>
         <button id="menuBtn6" class="menuBtn6">선택</button>
+        <button id="S1-next" class="S1-next">다음</button>
     <!-- Scene_2~8 -->
     <img src="/images/inrstrnt_2.png" id="inRstrnt2" class="d-none" />
     <img src="/images/inrstrnt_3.png" id="inRstrnt3" class="d-none" />
@@ -48,6 +49,7 @@
     <img src="/images/inrstrnt_8.png" id="inRstrnt8" class="d-none" />
     <!-- Scene_9 : 평가 -->
     <img src="/images/inRstrnt_9.png" id="inRstrnt9" class="d-none">
+        <input type="text">
     <!-- Scene_10~17 -->
     <img src="/images/inrstrnt_10.png" id="inRstrnt10" class="d-none" />
     <img src="/images/inrstrnt_11.png" id="inRstrnt11" class="d-none" />
