[restaurantCanvas] 평가 페이지 수정중
- 평가 가격 입력 받고 판매 가격과 비교까지는 가능해짐
- !!그런데!! 정상적으로 평가 가격에 반영되고 있지는 않음
- ..그래서.. 식당 및 메뉴 데이터를 위한 데이터 클래스 하나 만들어야 하나?

--- a/app.html
+++ b/app.html
@@ -49,7 +49,11 @@
     <img src="/images/inrstrnt_8.png" id="inRstrnt8" class="d-none" />
     <!-- Scene_9 : 평가 -->
     <img src="/images/inRstrnt_9.png" id="inRstrnt9" class="d-none">
-        <input type="text">
+        <form target="ifr" id="S9-form" class="d-none">
+          <input type="number" id="S9-input" class="S9-input" placeholder="평가 금액을 입력해주세요">
+          <input type="submit" value="평가" id="S9-submit" class="S9-submit">
+        </form>
+  <iframe name="ifr" style="display: none;"></iframe>
     <!-- Scene_10~17 -->
     <img src="/images/inrstrnt_10.png" id="inRstrnt10" class="d-none" />
     <img src="/images/inrstrnt_11.png" id="inRstrnt11" class="d-none" />
