[afterGameCanvas.js] 트로피 화면 수정중
- html에 트로피 이미지 추가하자
- 이제 머지할 거임

--- a/app.html
+++ b/app.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>town</title>
-    <script src="app.js" type="module" defer="defer"></script>
+    <title>app</title>
     <link rel="stylesheet" href="css/app.css">
+    <script src="app.js" type="module" defer="defer"></script>
   </head>
 
   <body>
@@ -63,6 +63,10 @@
     <img src="/images/inrstrnt_15.png" id="inRstrnt15" class="d-none" />
     <img src="/images/inrstrnt_16.png" id="inRstrnt16" class="d-none" />
     <img src="/images/inrstrnt_17.png" id="inRstrnt17" class="d-none" />
+
+    <!-- ■■■■■■■■■■■■■■■■■■ 게임 이후 ■■■■■■■■■■■■■■■■■■ -->
+    <!-- Scene_1 : 게임 결과 화면 -->
+    <img src="images/afterGame_0.png" id="afterGame0" class="d-none">
 
     <!-- ■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■ -->
 
