게이지 변경 성공 !

--- a/4battleApp.html
+++ b/4battleApp.html
@@ -29,9 +29,10 @@
     <img id="talk2" class="d-none" src="4battleImg/talk2.png" />
     <img id="talk3" class="d-none" src="4battleImg/talk3.png" />
     <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" />
+    <img id="talk5" class="d-none" src="4battleImg/예시.png" />
 
     <!-- background -->
-    <img id="background" class="d-none" src="./4battleImg/background.png" />
+    <img id="background" class="d-none" src="./4battleImg/배틀화면.png" />
 
     <!-- girl -->
     <img id="girl" class="d-none" src="./4battleImg/girl.png" />
