[afterGameCanvas.js] 게임 결과 트로피 화면 구현 완료
- 사실 잘 작동하는지 확인은 못 해봄ㅎ
- app.js에서 합치면 그때 확인해보자

--- a/app.html
+++ b/app.html
@@ -67,6 +67,8 @@
     <!-- ■■■■■■■■■■■■■■■■■■ 게임 이후 ■■■■■■■■■■■■■■■■■■ -->
     <!-- Scene_1 : 게임 결과 화면 -->
     <img src="images/afterGame_0.png" id="afterGame0" class="d-none">
+        <img src="/images/trophy.PNG" id="trophy" class="d-none">
+        <img src="/images/trophyLose.PNG" id="trophyLose" class="d-none">
 
     <!-- ■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■ -->
 
