퀴즈 버튼 추가

--- a/app.html
+++ b/app.html
@@ -80,6 +80,8 @@
   <img id="startbtn1" class="d-none" src="3quizImg/button_start.png">
   <img id="startbtn2" class="d-none" src="3quizImg/button_start2.png">
   <img id="rulebtn" class="d-none" src="3quizImg/rulebtn.png">
+  <img id="nextbtnW" class="d-none" src="3quizImg/button_next2.png">
+  <img id="nextbtnC" class="d-none" src="3quizImg/button_next1.png">
   <!-- 효과음 -->
   <audio id="startBeep" src="3quizSound/click.wav"></audio>
   <audio id="countBeep" src="3quizSound/cdown.wav"></audio>
