--- a/app.html
+++ b/app.html
@@ -76,12 +76,14 @@
   <img id="bg2" class="d-none" src="3quizImg/quiz_bg2.png" />
   <!-- 콘텐츠 -->
   <img id="rule" class="d-none" src="3quizImg/rule.png" />
+  <!-- 콘텐츠_퀴즈 -->
+  <img id="quizImg" class="d-none" src="3quizImg/ex_quizquiz.png" />
+  <img id="correctAnswer" class="d-none" src="3quizImg/ex_quizquizc.png" />
+  <img id="wrongAnswer" class="d-none" src="3quizImg/ex_quizquizw.png" />
   <!-- 버튼 -->
-  <img id="startbtn1" class="d-none" src="3quizImg/button_start.png">
-  <img id="startbtn2" class="d-none" src="3quizImg/button_start2.png">
-  <img id="rulebtn" class="d-none" src="3quizImg/rulebtn.png">
-  <img id="nextbtnW" class="d-none" src="3quizImg/button_next2.png">
-  <img id="nextbtnC" class="d-none" src="3quizImg/button_next1.png">
+  <img id="startbtn1" class="d-none" src="3quizImg/button_start.png" />
+  <img id="startbtn2" class="d-none" src="3quizImg/button_start2.png" />
+  <img id="rulebtn" class="d-none" src="3quizImg/rulebtn.png" />
   <!-- 효과음 -->
   <audio id="startBeep" src="3quizSound/click.wav"></audio>
   <audio id="countBeep" src="3quizSound/cdown.wav"></audio>
