--- a/app.html
+++ b/app.html
@@ -65,11 +65,31 @@
     <img src="/images/inrstrnt_17.png" id="inRstrnt17" class="d-none" />
 
     <!-- ■■■■■■■■■■■■■■■■■■ 게임 이후 ■■■■■■■■■■■■■■■■■■ -->
-    <!-- Scene_1 : 게임 결과 화면 -->
+    <!-- Scene_0 : 게임 결과 화면 -->
     <img src="images/afterGame_0.png" id="afterGame0" class="d-none">
         <img src="/images/trophy.PNG" id="trophy" class="d-none">
         <img src="/images/trophyLose.PNG" id="trophyLose" class="d-none">
-
+        <button id="AG-S0-nextBtn" class="button"><img src="/images/nextBtn.PNG"></button>
+    <!-- <img src="images/afterGame_1.png" id="afterGame1" class="d-none">
+    <img src="images/afterGame_2.png" id="afterGame2" class="d-none">
+    <img src="images/afterGame_3.png" id="afterGame3" class="d-none">
+    <img src="images/afterGame_4.png" id="afterGame4" class="d-none">
+    <img src="images/afterGame_5.png" id="afterGame5" class="d-none">
+    <img src="images/afterGame_6.png" id="afterGame6" class="d-none">
+    <img src="images/afterGame_7.png" id="afterGame7" class="d-none">
+    <img src="images/afterGame_8.png" id="afterGame8" class="d-none">
+    <img src="images/afterGame_9.png" id="afterGame9" class="d-none">
+    <img src="images/afterGame_10.png" id="afterGame10" class="d-none">
+    <img src="images/afterGame_11.png" id="afterGame11" class="d-none">
+    <img src="images/afterGame_12.png" id="afterGame12" class="d-none">
+    <img src="images/afterGame_13.png" id="afterGame13" class="d-none">
+    <img src="images/afterGame_14.png" id="afterGame14" class="d-none">
+    <img src="images/afterGame_15.png" id="afterGame15" class="d-none">
+    <img src="images/afterGame_16.png" id="afterGame16" class="d-none">
+    <!-- Scene_17 : Main || End -->
+    <img src="images/afterGame_17.png" id="afterGame17" class="d-none">
+        <button id="AG-S17-btnToMain" class="AG-S17-btnToMain"><img src="images/btnToMain.png"></button>
+        <button id="AG-S17-btnToEnding" class="AG-S17-btnToEnding"><img src="images/btnToEnding.png"></button>
     <!-- ■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■ -->
 
     <!-- 배경 -->
