마지막 시도중

--- a/4battleApp.html
+++ b/4battleApp.html
@@ -22,13 +22,13 @@
     <!-- 4battle JIN -->
 
     <!-- scenairo -->
-    <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
-    <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" />
-    <img id="talk0" class="d-none" src="4battleImg/talk0.png" />
-    <img id="talk1" class="d-none" src="4battleImg/talk1.png" />
-    <img id="talk2" class="d-none" src="4battleImg/talk2.png" />
-    <img id="talk3" class="d-none" src="4battleImg/talk3.png" />
-    <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" />
+    <!-- <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
+    <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" /> -->
+    <img id="talk0" class="d-none" src="4battleImg/talk_0.png" />
+    <img id="talk1" class="d-none" src="4battleImg/talk_1.png" />
+    <img id="talk2" class="d-none" src="4battleImg/Gamerule.png" />
+    <!-- <img id="talk3" class="d-none" src="4battleImg/talk3.png" /> -->
+    <img id="talk3" class="d-none" src="4attlebImg/Gamerule.png" />
     <img id="talk5" class="d-none" src="4battleImg/예시.png" />
 
     <!-- background -->
