--- a/app.html
+++ b/app.html
@@ -11,6 +11,12 @@
 
   <body>
     <!-- ■■■■■■■■■■■■■■■■■■ 맵 ■■■■■■■■■■■■■■■■■■■■-->
+    <!-- 시작 시나리오 -->
+    <img src="/images/startscen_0.png" id="start0" class="d-none" />
+    <img src="/images/startscen_1.png" id="start1" class="d-none" />
+    <img src="/images/startscen_2.png" id="start2" class="d-none" />
+    <img src="/images/startscen_3.png" id="start3" class="d-none" />
+    <img src="/images/startscen_4.png" id="start4" class="d-none" />
     <!-- 맵 배경 -->
     <img src="/images/townBg.png" id="map" class="d-none" />
     <!-- 식당 이미지 -->
@@ -59,7 +65,7 @@
       <input type="submit" value="평가" id="S9-submit" class="S9-submit" />
     </form>
     <iframe name="ifr" style="display: none"></iframe>
-    <!-- Scene_10~17 -->
+    <!-- Scene_10~16 좋은평가,슬롯머신 성공후 -->
     <img src="/images/inrstrnt_10.png" id="inRstrnt10" class="d-none" />
     <img src="/images/inrstrnt_11.png" id="inRstrnt11" class="d-none" />
     <img src="/images/inrstrnt_12.png" id="inRstrnt12" class="d-none" />
@@ -67,7 +73,15 @@
     <img src="/images/inrstrnt_14.png" id="inRstrnt14" class="d-none" />
     <img src="/images/inrstrnt_15.png" id="inRstrnt15" class="d-none" />
     <img src="/images/inrstrnt_16.png" id="inRstrnt16" class="d-none" />
+
+    <!-- Scene_17~ 좋은평가,슬롯머신 성공후 -->
     <img src="/images/inrstrnt_17.png" id="inRstrnt17" class="d-none" />
+    <img src="/images/inrstrnt_18.png" id="inRstrnt18" class="d-none" />
+    <img src="/images/inrstrnt_19.png" id="inRstrnt19" class="d-none" />
+    <img src="/images/inrstrnt_20.png" id="inRstrnt20" class="d-none" />
+    <img src="/images/inrstrnt_21.png" id="inRstrnt21" class="d-none" />
+    <img src="/images/inrstrnt_22.png" id="inRstrnt22" class="d-none" />
+    <img src="/images/inrstrnt_23.png" id="inRstrnt23" class="d-none" />
 
     <!-- ■■■■■■■■■■■■■■■■■■ 게임 이후 ■■■■■■■■■■■■■■■■■■ -->
     <!-- Scene_1 : 게임 결과 화면 -->
@@ -85,15 +99,13 @@
     <img class="d-none" id="startbtn2" src="3quizImg/button_start2.png" />
     <img class="d-none" id="rulebtn" src="3quizImg/rulebtn.png" />
 
-    <!-- ■■■■■■■■■■■■■■■■■■ 4battle JIN ■■■■■■■■■■■■■■■■■■ -->
+    <!-- ■■■■■■■■■■■■■■■■■■ JIN ■■■■■■■■■■■■■■■■■■ -->
     <!-- scenairo -->
-    <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
-    <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" />
-    <img id="talk0" class="d-none" src="4battleImg/talk0.png" />
-    <img id="talk1" class="d-none" src="4battleImg/talk1.png" />
-    <img id="talk2" class="d-none" src="4battleImg/talk2.png" />
-    <img id="talk3" class="d-none" src="4battleImg/talk3.png" />
-    <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" />
+    <!-- <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
+    <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" /> -->
+    <img id="talk0" class="d-none" src="4battleImg/talk_0.png" />
+    <img id="talk1" class="d-none" src="4battleImg/talk_1.png" />
+    <img id="talk2" class="d-none" src="4battleImg/Gamerule.png" />
 
     <!-- background -->
     <img id="background" class="d-none" src="./4battleImg/배틀화면.png" />
