--- a/app.html
+++ b/app.html
@@ -84,6 +84,8 @@
   <img id="startbtn1" class="d-none" src="3quizImg/button_start.png" />
   <img id="startbtn2" class="d-none" src="3quizImg/button_start2.png" />
   <img id="rulebtn" class="d-none" src="3quizImg/rulebtn.png" />
+  <button id="nextbtn">다음으로 ▶▶▶</button>
+
   <!-- 효과음 -->
   <audio id="startBeep" src="3quizSound/click.wav"></audio>
   <audio id="countBeep" src="3quizSound/cdown.wav"></audio>
