예진 최종합치기 완료 예진 메인브랜치로 통합

--- a/4battleApp.html
+++ b/4battleApp.html
@@ -15,7 +15,7 @@
         display: none;
       }
     </style>
-    <script type="module" src="4battleApp.js" defer="defer"></script>
+    <script type="module" src="./app.js" defer="defer"></script>
   </head>
 
   <body>
@@ -28,8 +28,6 @@
     <img id="talk1" class="d-none" src="4battleImg/talk_1.png" />
     <img id="talk2" class="d-none" src="4battleImg/Gamerule.png" />
     <!-- <img id="talk3" class="d-none" src="4battleImg/talk3.png" /> -->
-    <img id="talk3" class="d-none" src="4attlebImg/Gamerule.png" />
-    <img id="talk5" class="d-none" src="4battleImg/예시.png" />
 
     <!-- background -->
     <img id="background" class="d-none" src="./4battleImg/배틀화면.png" />
