현채의 최신 코드를 Shin-test에 업데이트를 했고 - 원격에 있는 상민님 최신 파일을 pull 할 것이다..

--- a/app.html
+++ b/app.html
@@ -115,5 +115,33 @@
     <img id="lose" class="d-none" src="./4battleImg/lose.png" />
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
     <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
+ 
+      <!-- ■■■■■■■■■■■■■■■■■■ 현채 ■■■■■■■■■■■■■■■■■■ -->
+      <audio src="./2kioskSound/clicked.wav" id="clicksound"></audio>
+      <audio src="./2kioskSound/win.mp3" id="winsound"></audio>
+      <audio src="./2kioskSound/fail.mp3" id="failsound"></audio>
+  
+      <img src="./2kioskImg/start.jpg" id="startkiosk" class="d-none">
+      <img src="./2kioskImg/gamerule.png" id="gamerule" class="d-none">
+      <img src="./2kioskImg/kimbap.jpg" id="food" class="d-none">
+    
+      <ul id="ingredient-list" class="d-none">
+          <li><input type="checkbox" name="ingredient" value="kim">  김밥김</li>
+          <li><input type="checkbox" name="ingredient" value="bap">  쌀밥</li>
+          <li><input type="checkbox" name="ingredient" value="bbobbye">  시금치</li>
+          <li><input type="checkbox" name="ingredient" value="mintchoco">  민트초코</li>
+          <li><input type="checkbox" name="ingredient" value="danmuji">  단무지</li>
+          <li><input type="checkbox" name="ingredient" value="carrot">  당근</li>
+          <li><input type="checkbox" name="ingredient" value="egg">  계란</li>
+      </ul>
+  
+      <button id="start-btn" class="d-none">시작</button>
+      <button id="next-btn" class="d-none">다음</button>
+      <button id="submit-btn" class="d-none">제출</button>
+      <button id="last-btn" class="d-none">나가기</button>
+  
+      <img src="./2kioskImg/win_.png" id = "win" class= "d-none">
+      <img src="./2kioskImg/lose_.png" id = "lose" class= "d-none">
+ 
   </body>
 </html>
