--- a/app.html
+++ b/app.html
@@ -147,59 +147,53 @@
     <img src="images/afterGame_15.png" id="afterGame15" class="d-none">
     <img src="images/afterGame_16.png" id="afterGame16" class="d-none">
     <!-- Scene_17 : Main || End -->
+    
   <img src="images/afterGame_17.png" id="afterGame17" class="d-none">
   <button id="AG-S17-btnToMain" class="AG-S17-btnToMain"><img src="images/btnToMain.png"></button>
   <button id="AG-S17-btnToEnding" class="AG-S17-btnToEnding"><img src="images/btnToEnding.png"></button>
   <!-- ■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■ -->
 
-
-
-
-  <!-- 배경 -->
+  <!-- 배경
   <img src="3quizImg/quiz_bg1.png" class="d-none" id="bg1" />
   <img src="3quizImg/quiz_bg2.png" class="d-none" id="bg2" />
   <!-- 콘텐츠 -->
-  <img src="3quizImg/rule.png" class="d-none" id="rule" />
+  <!-- <img src="3quizImg/rule.png" class="d-none" id="rule" /> -->
   <!-- 버튼 -->
-  <img class="d-none" id="startbtn1" src="3quizImg/button_start.png" />
+  <!-- <img class="d-none" id="startbtn1" src="3quizImg/button_start.png" />
   <img class="d-none" id="startbtn2" src="3quizImg/button_start2.png" />
-  <img class="d-none" id="rulebtn" src="3quizImg/rulebtn.png" />
+  <img class="d-none" id="rulebtn" src="3quizImg/rulebtn.png" /> -->
 
   <!-- ■■■■■■■■■■■■■■■■■■ 4battle JIN ■■■■■■■■■■■■■■■■■■ -->
   <!-- scenairo -->
-  <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
+  <!-- <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
   <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" />
   <img id="talk0" class="d-none" src="4battleImg/talk0.png" />
   <img id="talk1" class="d-none" src="4battleImg/talk1.png" />
   <img id="talk2" class="d-none" src="4battleImg/talk2.png" />
   <img id="talk3" class="d-none" src="4battleImg/talk3.png" />
-  <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" />
+  <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" /> -->
 
   <!-- background -->
-  <img id="background" class="d-none" src="./4battleImg/background.png" />
+  <!-- <img id="background" class="d-none" src="./4battleImg/background.png" /> -->
 
   <!-- girl -->
-  <img id="girl" class="d-none" src="./4battleImg/girl.png" />
-
+  <!-- <img id="girl" class="d-none" src="./4battleImg/girl.png" /> -->
   <!-- game NPC -->
-  <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
+  <!-- <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
   <img id="4user" class="d-none" src="./4battleImg/userHappy.png" />
   <img id="ceowin" class="d-none" src="./4battleImg/userHappy.png" />
-  <img id="userwin" class="d-none" src="./4battleImg/ceoMad.png" />
-
+  <img id="userwin" class="d-none" src="./4battleImg/ceoMad.png" /> -->
   <!-- food -->
-  <img id="food" class="d-none" src="./4battleImg/onion.png" />
-  <img id="cutfood" class="d-none" src="./4battleImg/onion2.png" />
-
+  <!-- <img id="food" class="d-none" src="./4battleImg/onion.png" />
+  <img id="cutfood" class="d-none" src="./4battleImg/onion2.png" /> -->
   <!-- space -->
-  <img id="spaceUp" class="d-none" src="./4battleImg/spaceup.png" />
-  <img id="spaceDown" class="d-none" src="./4battleImg/spacedown1.png" />
-
+  <!-- <img id="spaceUp" class="d-none" src="./4battleImg/spaceup.png" />
+  <img id="spaceDown" class="d-none" src="./4battleImg/spacedown1.png" /> -->
   <!-- win/lose -->
-  <img id="win" class="d-none" src="./4battleImg/win.png" />
+  <!-- <img id="win" class="d-none" src="./4battleImg/win.png" />
   <img id="lose" class="d-none" src="./4battleImg/lose.png" />
   <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
-  <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
+  <img src="/images/menu.png" id="inRstrnt1" class="d-none" /> -->
 </body>
 
 </html>
