Han-Shin merge 중
- 현채 게임 작동 안 함

--- a/app.html
+++ b/app.html
@@ -148,9 +148,9 @@
     <img src="images/afterGame_16.png" id="afterGame16" class="d-none">
     <!-- Scene_17 : Main || End -->
     
-  <img src="images/afterGame_17.png" id="afterGame17" class="d-none">
+  <!-- <img src="images/afterGame_17.png" id="afterGame17" class="d-none">
   <button id="AG-S17-btnToMain" class="AG-S17-btnToMain"><img src="images/btnToMain.png"></button>
-  <button id="AG-S17-btnToEnding" class="AG-S17-btnToEnding"><img src="images/btnToEnding.png"></button>
+  <button id="AG-S17-btnToEnding" class="AG-S17-btnToEnding"><img src="images/btnToEnding.png"></button> -->
   <!-- ■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■ -->
 
   <!-- 배경
@@ -226,14 +226,6 @@
       <img src="./2kioskImg/win_.png" id = "win" class= "d-none">
       <img src="./2kioskImg/lose_.png" id = "lose" class= "d-none">
  
-</body>
-
-</html>
-  <!-- win/lose -->
-  <img id="win" class="d-none" src="./4battleImg/win.png" />
-  <img id="lose" class="d-none" src="./4battleImg/lose.png" />
-  <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
-  <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
 </body>
 
 </html>
