예진 합친 것 상민오빠거랑 병합

--- a/app.html
+++ b/app.html
@@ -108,7 +108,7 @@
     <img id="talk2" class="d-none" src="4battleImg/Gamerule.png" />
 
     <!-- background -->
-    <img id="background" class="d-none" src="./4battleImg/배틀화면.png" />
+    <img id="background" class="d-none" src="./4battleImg/배틀화면텍스트.png" />
 
     <!-- game NPC -->
     <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
@@ -125,5 +125,11 @@
     <img id="lose" class="d-none" src="./4battleImg/lose.png" />
     <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
     <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
+
+    <!-- battle audio -->
+    <audio id="battleBgm" src="/4battleSound/BMG01.mp3"></audio>
+    <audio id="battleStartBtn" src="/4battleSound/3quizSound_click.wav"></audio>
+    <audio id="battleClick" src="/4battleSound/click00.wav"></audio>
+    <audio id="battleKeyup" src="/4battleSound/etc03.wav"></audio>
   </body>
 </html>
