--- a/app.html
+++ b/app.html
@@ -109,7 +109,6 @@
 
     <!-- 엔딩 -->
     <video id="ending" src="/images/ending.mp4" width="100%" height="100%" class="d-none" ></video>
-
     
     <!-- S.E. -->
     <audio id="mainSE" src="/1slotSound/main00.wav"></audio>
@@ -124,6 +123,39 @@
 
   <img src="images/afterGame_0.png" id="afterGame0" class="d-none">
 
+  <!-- ■■■■■■■■■■■■■■■■■■ Kiosk ■■■■■■■■■■■■■■■■■■ -->
+  
+  <!-- ■■■■■■■■■■■■■■■■■■ 음식 맞추기 ■■■■■■■■■■■■■■■■■■ -->
+  <audio src="./2kioskSound/clicked.wav" id="clicksound"></audio>
+  <audio src="./2kioskSound/win.mp3" id="winsound"></audio>
+  <audio src="./2kioskSound/fail.mp3" id="failsound"></audio>
+
+  <img src="./2kioskImg/start.jpg" id="startkiosk" class="d-none">
+  <img src="./2kioskImg/gamerule.png" id="gamerule" class="d-none">
+  <img src="./2kioskImg/kimbap.jpg" id="food" class="d-none">
+
+  <ul id="ingredient-list" class="d-none">
+      <li><input type="checkbox" name="ingredient" value="kim">  김밥김</li>
+      <li><input type="checkbox" name="ingredient" value="bap">  쌀밥</li>
+      <li><input type="checkbox" name="ingredient" value="bbobbye">  시금치</li>
+      <li><input type="checkbox" name="ingredient" value="mintchoco">  민트초코</li>
+      <li><input type="checkbox" name="ingredient" value="danmuji">  단무지</li>
+      <li><input type="checkbox" name="ingredient" value="carrot">  당근</li>
+      <li><input type="checkbox" name="ingredient" value="egg">  계란</li>
+  </ul>
+
+  <button id="start-btn" class="d-none">시작</button>
+  <button id="next-btn" class="d-none">다음</button>
+  <button id="submit-btn" class="d-none">제출</button>
+  <button id="last-btn" class="d-none">나가기</button>
+
+  <img src="./2kioskImg/win_.png" id = "win" class= "d-none">
+  <img src="./2kioskImg/lose_.png" id = "lose" class= "d-none">
+
+  <!-- ■■■■■■■■■■■■■■■■■■ 사장과의 대결 ■■■■■■■■■■■■■■■■■■ -->  
+
+
+  
   <!-- ■■■■■■■■■■■■■■■■■■ 본게임 이후 ■■■■■■■■■■■■■■■■■■ -->
   <!-- Scene_0 : 게임 결과 화면 -->
   <img src="images/afterGame_0.png" id="afterGame0" class="d-none">
@@ -196,35 +228,6 @@
   <!-- win/lose -->
   <img id="win" class="d-none" src="./4battleImg/win.png" />
   <img id="lose" class="d-none" src="./4battleImg/lose.png" />
-  <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
-  <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
- 
-      <!-- ■■■■■■■■■■■■■■■■■■ 현채 ■■■■■■■■■■■■■■■■■■ -->
-      <audio src="./2kioskSound/clicked.wav" id="clicksound"></audio>
-      <audio src="./2kioskSound/win.mp3" id="winsound"></audio>
-      <audio src="./2kioskSound/fail.mp3" id="failsound"></audio>
-  
-      <img src="./2kioskImg/start.jpg" id="startkiosk" class="d-none">
-      <img src="./2kioskImg/gamerule.png" id="gamerule" class="d-none">
-      <img src="./2kioskImg/kimbap.jpg" id="food" class="d-none">
-    
-      <ul id="ingredient-list" class="d-none">
-          <li><input type="checkbox" name="ingredient" value="kim">  김밥김</li>
-          <li><input type="checkbox" name="ingredient" value="bap">  쌀밥</li>
-          <li><input type="checkbox" name="ingredient" value="bbobbye">  시금치</li>
-          <li><input type="checkbox" name="ingredient" value="mintchoco">  민트초코</li>
-          <li><input type="checkbox" name="ingredient" value="danmuji">  단무지</li>
-          <li><input type="checkbox" name="ingredient" value="carrot">  당근</li>
-          <li><input type="checkbox" name="ingredient" value="egg">  계란</li>
-      </ul>
-  
-      <button id="start-btn" class="d-none">시작</button>
-      <button id="next-btn" class="d-none">다음</button>
-      <button id="submit-btn" class="d-none">제출</button>
-      <button id="last-btn" class="d-none">나가기</button>
-  
-      <img src="./2kioskImg/win_.png" id = "win" class= "d-none">
-      <img src="./2kioskImg/lose_.png" id = "lose" class= "d-none">
  
 </body>
 
