--- a/app.html
+++ b/app.html
@@ -125,8 +125,6 @@
   <img src="images/afterGame_0.png" id="afterGame0" class="d-none">
 
   <!-- ■■■■■■■■■■■■■■■■■■ Kiosk ■■■■■■■■■■■■■■■■■■ -->
-
-  <!-- ■■■■■■■■■■■■■■■■■■ 음식 맞추기 ■■■■■■■■■■■■■■■■■■ -->
   <audio src="./2kioskSound/clicked.wav" id="clicksound"></audio>
   <audio src="./2kioskSound/win.mp3" id="winsound"></audio>
   <audio src="./2kioskSound/fail.mp3" id="failsound"></audio>
@@ -150,10 +148,21 @@
   <button id="submit-btn" class="d-none">제출</button>
   <button id="last-btn" class="d-none">나가기</button>
 
-  <img src="./2kioskImg/win_.png" id="win" class="d-none">
-  <img src="./2kioskImg/lose_.png" id="lose" class="d-none">
+  <img src="./2kioskImg/win_.png" id="hcwin" class="d-none">
+  <img src="./2kioskImg/lose_.png" id="hclose" class="d-none">
+
+  <!-- ■■■■■■■■■■■■■■■■■■ 음식 맞추기 ■■■■■■■■■■■■■■■■■■ -->
+  
 
   <!-- ■■■■■■■■■■■■■■■■■■ 사장과의 대결 ■■■■■■■■■■■■■■■■■■ -->
+  <!-- background -->
+  <img src="/4battleImg/배틀화면텍스트.png" id="background" class="d-none">
+
+  <!-- scenairo -->
+  <img id="talk0" class="d-none" src="4battleImg/talk_0.png" />
+  <img id="talk1" class="d-none" src="4battleImg/talk_1.png" />
+  <img id="talk2" class="d-none" src="4battleImg/Gamerule.png" />
+
   <!-- game NPC -->
   <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
   <img id="4user" class="d-none" src="./4battleImg/userHappy.png" />
@@ -171,6 +180,14 @@
   <!-- win/lose -->
   <img id="win" class="d-none" src="./4battleImg/win.png" />
   <img id="lose" class="d-none" src="./4battleImg/lose.png" />
+
+  <audio id="battleBgm" src="./4battleSound/BMG01.mp3"></audio>
+  <audio id="battleClick" src="./4battleSound/click00.wav"></audio>
+  <audio
+    id="battleStartBtn"
+    src="./4battleSound/3quizSound_click.wav"
+  ></audio>
+  <audio id="battleKeyup" src="./4battleSound/etc03.wav"></audio>
 
 
   <!-- ■■■■■■■■■■■■■■■■■■ 본게임 이후 ■■■■■■■■■■■■■■■■■■ -->
@@ -200,30 +217,6 @@
   <!-- <img src="images/afterGame_17.png" id="afterGame17" class="d-none">
   <button id="AG-S17-btnToMain" class="AG-S17-btnToMain"><img src="images/btnToMain.png"></button>
   <button id="AG-S17-btnToEnding" class="AG-S17-btnToEnding"><img src="images/btnToEnding.png"></button> -->
-  <!-- ■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■ -->
-
-  <!-- 배경
-  <img src="3quizImg/quiz_bg1.png" class="d-none" id="bg1" />
-  <img src="3quizImg/quiz_bg2.png" class="d-none" id="bg2" />
-  <!-- 콘텐츠 -->
-  <!-- <img src="3quizImg/rule.png" class="d-none" id="rule" /> -->
-  <!-- 버튼 -->
-  <!-- <img class="d-none" id="startbtn1" src="3quizImg/button_start.png" />
-  <img class="d-none" id="startbtn2" src="3quizImg/button_start2.png" />
-  <img class="d-none" id="rulebtn" src="3quizImg/rulebtn.png" /> -->
-
-  <!-- ■■■■■■■■■■■■■■■■■■ 4battle JIN ■■■■■■■■■■■■■■■■■■ -->
-  <!-- scenairo -->
-  <!-- <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
-  <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" />
-  <img id="talk0" class="d-none" src="4battleImg/talk0.png" />
-  <img id="talk1" class="d-none" src="4battleImg/talk1.png" />
-  <img id="talk2" class="d-none" src="4battleImg/talk2.png" />
-  <img id="talk3" class="d-none" src="4battleImg/talk3.png" />
-  <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" /> -->
-
-  <!-- background -->
-  <!-- <img id="background" class="d-none" src="./4battleImg/background.png" /> -->
 
 </body>
 
