세영+예진통합 클릭연결문제해결중

--- a/app.html
+++ b/app.html
@@ -188,34 +188,40 @@
     <audio id="quizWBeep" src="3quizSound/quizw.wav"></audio>
     <audio id="quizIntroBgm" src="3quizSound/bgm.mp3"></audio>
 
-    <!-- ■■■■■■■■■■■■■■■■■■ 4battle JIN ■■■■■■■■■■■■■■■■■■ -->
-    <!-- scenairo -->
-    <!-- <img id="talk00" class="d-none" src="4battleImg/잠깐1.png" />
-  <img id="talk01" class="d-none" src="4battleImg/잠깐2.png" />
-  <img id="talk0" class="d-none" src="4battleImg/talk0.png" />
-  <img id="talk1" class="d-none" src="4battleImg/talk1.png" />
-  <img id="talk2" class="d-none" src="4battleImg/talk2.png" />
-  <img id="talk3" class="d-none" src="4battleImg/talk3.png" />
-  <img id="talk4" class="d-none" src="4battleImg/Gamerule.png" /> -->
-
+    <!-- ■■■■■■■■■■■■■■■■■■ 사장과의 대결 ■■■■■■■■■■■■■■■■■■ -->
     <!-- background -->
-    <!-- <img id="background" class="d-none" src="./4battleImg/background.png" /> -->
+    <img src="/4battleImg/배틀화면텍스트.png" id="background" class="d-none" />
+
+    <!-- scenairo -->
+    <img id="talk0" class="d-none" src="4battleImg/talk_0.png" />
+    <img id="talk1" class="d-none" src="4battleImg/talk_1.png" />
+    <img id="talk2" class="d-none" src="4battleImg/Gamerule.png" />
 
     <!-- game NPC -->
-    <!-- <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
+    <img id="ceo" class="d-none" src="./4battleImg/ceoHappy.png" />
     <img id="4user" class="d-none" src="./4battleImg/userHappy.png" />
     <img id="ceowin" class="d-none" src="./4battleImg/userHappy.png" />
-    <img id="userwin" class="d-none" src="./4battleImg/ceoMad.png" /> -->
+    <img id="userwin" class="d-none" src="./4battleImg/ceoMad.png" />
+
+    <!-- food -->
+    <img id="food" class="d-none" src="./4battleImg/onion.png" />
+    <img id="cutfood" class="d-none" src="./4battleImg/onion2.png" />
 
     <!-- space -->
-    <!-- <img id="spaceUp" class="d-none" src="./4battleImg/spaceup.png" />
-    <img id="spaceDown" class="d-none" src="./4battleImg/spacedown1.png" /> -->
+    <img id="spaceUp" class="d-none" src="./4battleImg/spaceup.png" />
+    <img id="spaceDown" class="d-none" src="./4battleImg/spacedown1.png" />
 
     <!-- win/lose -->
     <img id="win" class="d-none" src="./4battleImg/win.png" />
     <img id="lose" class="d-none" src="./4battleImg/lose.png" />
-    <img src="/images/inRstrnt_0.png" id="inRstrnt0" class="d-none" />
-    <img src="/images/menu.png" id="inRstrnt1" class="d-none" />
+
+    <audio id="battleBgm" src="./4battleSound/BMG01.mp3"></audio>
+    <audio id="battleClick" src="./4battleSound/click00.wav"></audio>
+    <audio
+      id="battleStartBtn"
+      src="./4battleSound/3quizSound_click.wav"
+    ></audio>
+    <audio id="battleKeyup" src="./4battleSound/etc03.wav"></audio>
 
     <!-- ■■■■■■■■■■■■■■■■■■ 현채 ■■■■■■■■■■■■■■■■■■ -->
     <audio src="./2kioskSound/clicked.wav" id="clicksound"></audio>
