--- a/app.html
+++ b/app.html
@@ -229,7 +229,7 @@
     <audio src="./2kioskSound/fail.mp3" id="failsound"></audio>
 
     <img src="./2kioskImg/start.jpg" id="startkiosk" class="d-none" />
-    <img src="./2kioskImg/gamerule.png" id="gamerule" class="d-none" />
+    <!-- <img src="./2kioskImg/gamerule.png" id="gamerule" class="d-none" /> -->
     <img src="./2kioskImg/kimbap.jpg" id="food" class="d-none" />
 
     <ul id="ingredient-list" class="d-none">
