--- a/app.html
+++ b/app.html
@@ -257,8 +257,8 @@
     <audio src="./2kioskSound/fail.mp3" id="failsound"></audio>
 
     <img src="./2kioskImg/start.jpg" id="startkiosk" class="d-none" />
-    <!-- <img src="./2kioskImg/gamerule.png" id="gamerule" class="d-none" /> -->
-    <img src="./2kioskImg/kimbap.jpg" id="food" class="d-none" />
+    <img src="./2kioskImg/gamerule.png" id="gamerule" class="d-none" />
+    <img src="./2kioskImg/kimbap.jpg" id="kimbab" class="d-none" />
 
     <ul id="ingredient-list" class="d-none">
       <li><input type="checkbox" name="ingredient" value="kim" /> 김밥김</li>
@@ -281,7 +281,7 @@
     <button id="submit-btn" class="d-none">제출</button>
     <button id="last-btn" class="d-none">나가기</button>
 
-    <img src="./2kioskImg/win_.png" id="win" class="d-none" />
-    <img src="./2kioskImg/lose_.png" id="lose" class="d-none" />
+    <img src="./2kioskImg/win_.png" id="hcwin" class="d-none" />
+    <img src="./2kioskImg/lose_.png" id="hclose" class="d-none" />
   </body>
 </html>
